--- a/lotus/speed_acceleration_analysis.ipynb
+++ b/lotus/speed_acceleration_analysis.ipynb
@@ -156,7 +156,7 @@
    ],
    "source": [
     "# read data\n",
-    "df = pd.read_csv(r\"D:\\Research\\UBI车险\\data\\486_wuhan_test - LT.csv\")\n",
+    "df = pd.read_csv(r\"D:\\Research\\UBI车险\\data\\real_data\\486_wuhan_test - LT.csv\")\n",
     "df[3716:3725]"
    ]
   },
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aacbbae4-6d8a-4972-b1f7-c813ba74f2b3",
+   "id": "fd465a51-d1b6-48fc-9c5b-43996ac48271",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "99b458e0",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "4e39fdb9-e0e7-4a3e-b4e9-a334d78f47c6",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "ce9d0f54-a890-467e-846f-a7d35b52b2db",
    "metadata": {},
    "outputs": [
